Filter-date: collapsed icon for second levels in options

--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -104,7 +104,46 @@
               <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildrenInclude">
                 <div class="itemBoxTable">
                   <div class="itemBoxBody itemBoxBody--sortableConnected itemBoxBody--sortableInclude ui-sortable">
-
+                    <ul class="itemBoxTable__bodyRow">
+                      <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <div class="pmx-field">
+                            <div class="pmx-field__inner">
+                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                                <div class="pmx-selector__block ">
+                                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">next 2 weeks (12/03/18-25/03/18)</div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
+                        </div>
+                      </li>
+                    </ul>
+                    <ul class="itemBoxTable__bodyRow">
+                      <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <div class="pmx-field">
+                            <div class="pmx-field__inner">
+                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                                <div class="pmx-selector__block ">
+                                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">19/03/18-20/03/18</div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
+                        </div>
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -145,7 +184,46 @@
               <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildrenExclude">
                 <div class="itemBoxTable">
                   <div class="itemBoxBody itemBoxBody--sortableConnected itemBoxBody--sortableExclude ui-sortable">
-
+                    <ul class="itemBoxTable__bodyRow">
+                      <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <div class="pmx-field">
+                            <div class="pmx-field__inner">
+                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                                <div class="pmx-selector__block ">
+                                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">today</div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
+                        </div>
+                      </li>
+                    </ul>
+                    <ul class="itemBoxTable__bodyRow">
+                      <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <div class="pmx-field">
+                            <div class="pmx-field__inner">
+                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                                <div class="pmx-selector__block ">
+                                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">18/03/18</div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
+                        </div>
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -173,7 +251,7 @@
               <ul class="itemBoxTable__bodyRow">
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action--toggle">ऄ Smart Dates</i>
+                    <i class="itemBoxTable__action--toggle">अ Smart Dates</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -215,7 +293,7 @@
               <ul class="itemBoxTable__bodyRow">
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action--toggle">ऄ Simple Dates</i>
+                    <i class="itemBoxTable__action--toggle">अ Simple Dates</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -257,7 +335,7 @@
               <ul class="itemBoxTable__bodyRow">
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action--toggle">ऄ Ranges</i>
+                    <i class="itemBoxTable__action--toggle">अ Ranges</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -299,7 +377,7 @@
               <ul class="itemBoxTable__bodyRow">
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action--toggle">ऄ Next/Last</i>
+                    <i class="itemBoxTable__action--toggle">अ Next/Last</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
