--- a/_includes/blocks/app-header.html
+++ b/_includes/blocks/app-header.html
@@ -1,10 +1,10 @@
 <div class="app-header-inner cf">
   <div class="app-header-inner__left">
     <div class="app-header-inner__item">
-      <h1>
-        <a href="#" class="JS_toggle-app-navigator">छ</a>
-        <a href="#">Dashboard</a>
-      </h1>
+      <a href="#" class="JS_toggle-app-navigator">छ</a>
+    </div>
+    <div class="app-header-inner__item">
+      <a href="#">ढ</a>
     </div>
   </div>
   <div class="app-header-inner__right">
