filter-tag: added default collapse for options block

--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -272,7 +272,7 @@
         <ul class="itemBoxTable__bodyRow JS_multiSelector__box--optionsTitle">
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action--toggle">ऄ All</i>
+              <i class="itemBoxTable__action--toggle">अ All</i>
             </div>
           </li>
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
